canary/service-stable.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-stable-svc
  namespace: default
spec:
  selector:
    app: app-canary
  ports:
    - port: 80
      targetPort: 8080
